force-app/main/default/objects/Strategy__c/Strategy__c.object-meta.xml
<CustomObject>
    <description>The new Custom Object &quot;Strategy&quot; is created for the Client Plan Requirement (Case 2491 - Create Client Level Business Plan Tab)</description>
    <label>Strategy</label>
    <nameField>
        <displayFormat>STG-{0000}</displayFormat>
        <label>Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>