force-app/main/default/objects/Strategy__c/fields/Action_Steps_PlannedTaken__c.field-meta.xml
<CustomField>
    <fullName>Action_Steps_PlannedTaken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Steps Planned/Taken</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>