force-app/main/default/objects/Strategy__c/fields/Applicable_for__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for__c</fullName>
    <label>Applicable for?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional Only</fullName>
            </value>
            <value>
                <fullName>Surest Only</fullName>
            </value>
            <value>
                <fullName>Traditional &amp; Surest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>