force-app/main/default/objects/Strategy__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>