force-app/main/default/objects/Strategy__c/fields/Strategy_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>