force-app/main/default/objects/Strategy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Steps_PlannedTaken__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Goal__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Strategy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>contains</operation>
        <value>Voican</value>
    </filters>
    <label>All</label>
</ListView>